@startuml dendrites_architecture
left to right direction
skinparam packageStyle rectangle
skinparam shadowing false
skinparam monochrome true
skinparam classAttributeIconSize 0

title neuralnet/src/dendrites class structure

package "dendrites" {
  enum DendriteType {
    Unknown
    Question
    Statement
    Token
    StopWord
    Other
  }

  class TextDendrite {
    + uid: String
    + connections: Vec<Axon>
    + data: String
    + metadata: NodeMetadata
    + dendrite_type: DendriteType
    + new(data: &str, metadata: &NodeMetadata, dendrite_type: DendriteType): TextDendrite
    + connect(other: String, weight: i64)
  }

  class ImageDendrite {
    + uid: String
    + connections: Vec<Axon>
    + data: String
    + feature_type: String
    + metadata: NodeMetadata
    + new(data: &str, metadata: &NodeMetadata, dendrite_type: DendriteType): ImageDendrite
    + connect(other: String, weight: i64)
  }

  class MultimodalDendrite {
    + uid: String
    + connections: Vec<Axon>
    + data: String
    + modality: String
    + metadata: NodeMetadata
    + new(data: &str, metadata: &NodeMetadata, dendrite_type: DendriteType): MultimodalDendrite
    + connect(other: String, weight: i64)
  }
}

interface NetworkNode <<external>>
class NodeMetadata <<external>>
class Axon <<external>>

NetworkNode <|.. TextDendrite
NetworkNode <|.. ImageDendrite
NetworkNode <|.. MultimodalDendrite

TextDendrite *-- Axon
ImageDendrite *-- Axon
MultimodalDendrite *-- Axon

TextDendrite ..> NodeMetadata
ImageDendrite ..> NodeMetadata
MultimodalDendrite ..> NodeMetadata

TextDendrite ..> DendriteType
ImageDendrite ..> DendriteType
MultimodalDendrite ..> DendriteType
@enduml